--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background-colo: black;
-  text: white;
+  background-color: black;
+  color: white;
   font-family: OpenSans,helvetica;
 }
 
