--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   color: white;
-  font-family: OpenSans,helvetica;
+  font-family: Mono,helvetica;
 }
 
 header {
