--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,17 @@ section {
 
 a:link {
   color: #cccccc;
+  text-decoration: none;
 }
 a:visited {
   color: #bbbbbb;
+  text-decoration: none;
 }
 a:hover {
   color: #dddddd;
+  text-decoration: none;
+}
+a:active {
+  color: #dddddd;
+  text-decoration: none;
 }
