--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ section {
   margin-bottom: 3rem;
 }
 
+a {
+  color: #dda4a4;
+  text-decoration: none;
+  transition: 300ms linear;
+}
 a:link {
   color: #dda4a4;
   text-decoration: none;
