--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,6 @@ img {
 ul {
   list-style: none;
   display: flex;
-}
-ul > li {
-  flex:1;
+  flex-wrap: wrap;
+  justify-content: space-around;  
 }
